# FlixRec

./: README.md  app.py  database.py  db2pc.py  jlm.db  main.py  pc2rec.py  pyproject.toml
templates/: base.html  index.html  same_titles.html  show_results.html
