[tool.poetry]
name = "traktrecs"
version = "0.1.0"
description = ""
authors = ["navanchauhan <navanchauhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
SQLAlchemy = "^1.4.36"
tqdm = "^4.64.0"
sentence-transformers = "^2.2.0"
faiss-cpu = "^1.7.2"
Flask = "^2.1.2"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
waitress = "^2.1.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pinecone-client = "^2.0.10"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
